# RobotZ

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/robotz-automation/: Cargo.toml  build.rs
crates/robotz-automation/assets/: windows-app-manifest.xml
crates/robotz-automation/csrc/: xi_helpers.c
crates/robotz-automation/examples/: inspect.rs
crates/robotz-automation/src/: calibration.rs  desktop_automation.rs  lib.rs  pisci_bridge.rs  piscis_bridge.rs  uia.rs
crates/robotz-automation/src/screen/: linux.rs  macos.rs  mod.rs  windows.rs
crates/robotz-browser/: Cargo.toml
crates/robotz-browser/src/: download.rs  lib.rs  manager.rs  pisci_bridge.rs  piscis_bridge.rs  snapshot.rs  tool.rs
crates/robotz-core/: Cargo.toml
crates/robotz-core/src/: lib.rs  proc.rs  tool.rs
crates/robotz-host/: Cargo.toml
crates/robotz-host/src/: bench.rs  calculator_panel.rs  calibrate.rs  calibration_panel.rs  coords.rs  lib.rs  main.rs  mcp_client.rs  panel.rs  runner.rs  uia_drag_panel.rs
crates/robotz-mcp/: Cargo.toml
crates/robotz-mcp/src/: main.rs
crates/robotz-toolset/: Cargo.toml
crates/robotz-toolset/src/: lib.rs
scripts/: install.ps1  install.sh
