[package]
name = "robotz-automation"
description = "Cross-platform desktop control tools (screen capture, mouse/keyboard, windows) for RobotZ"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
robotz-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
base64.workspace = true
image.workspace = true
once_cell = "1"
# Cross-platform screenshot library (Linux X11/Wayland, macOS). Windows uses
# the Win32 GDI path in src/screen/windows.rs instead.
xcap = "0.9"

# Optional: re-implement `piscis_kernel::Tool` on top of the robotz tools so
# openpiscis can consume this crate as a drop-in replacement. Off by default.
piscis-kernel = { git = "https://github.com/njbinbin-piscis/piscis-engine.git", package = "piscis-kernel", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows UI Automation tree (uia tool).
uiautomation = { version = "0.24", features = ["all"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = []
# Bridge layer implemented in stage 2.
piscis-kernel = ["dep:piscis-kernel"]

[lints]
workspace = true
