[package]
name = "robotz-mcp"
description = "MCP server exposing RobotZ computer-use tools over stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "robotz-mcp"
path = "src/main.rs"

[dependencies]
robotz-core.workspace = true
robotz-toolset = { path = "../robotz-toolset" }
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.7", features = ["server", "transport-io"] }

[lints]
workspace = true
